--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
 <input type="text" class="pokemonName" #pokemonName>
 <button (click)="getAPokemon(pokemonName.value)">getPokemon</button>
 <div *ngFor="let pokemon of pokemonArray">
-  {{pokemon.name}}
+  <div routerLink="pokemon/{{pokemon.name}}">{{pokemon.name}}
   <img width="30" alt="" src="https://img.pokemondb.net/sprites/red-blue/normal/{{pokemon.name}}.png"></div>
+  </div>
 
