--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,9 @@
-<p>
-  home works!
-</p>
+<div class="container mt-5 align-items-center w-100">
+  <div class="row align-items-center w-100">
+      <div class="col text-center text-md-center">
+          <h1>Welcome to PokeDex</h1>
+          <p class="lead">Check em' all!</p>
+          <p>This is a little <span style="color:crimson">Angular</span> application to test stuff.</p>
+      </div>
+  </div>
+</div>
