add the random screen

--- a/src/app/pages/random/random.component.html
+++ b/src/app/pages/random/random.component.html
@@ -1,3 +1,9 @@
-<p>
-  random works!
-</p>
+<div *ngIf="allPokemons !==undefined" style="text-align:center">
+  <h1>
+  You just got {{allPokemons[randomNumber].name}}!
+  </h1>
+  <img width="300" alt="Pokemon sprite" src="https://img.pokemondb.net/sprites/red-blue/normal/{{allPokemons[randomNumber].name}}.png">
+</div>
+<div class="d-flex flex-column align-items-center w-100 justify-content-center align-items-center my-5">
+  <button class="btn btn-dark" (click)="getAnotherRandomPokemon()">Get Another One!</button>
+</div>
