--- a/src/app/pages/navbar/navbar.component.html
+++ b/src/app/pages/navbar/navbar.component.html
@@ -13,7 +13,7 @@
           <a class="nav-link" routerLink="pokemonList">PokemonList</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerlink="">Random!</a>
+          <a class="nav-link" routerLink="random">Random!</a>
         </li>
       </ul>
     </div>
