--- a/src/app/pages/random/random.component.html
+++ b/src/app/pages/random/random.component.html
@@ -5,5 +5,5 @@
   <img width="300" alt="Pokemon sprite" src="https://img.pokemondb.net/sprites/red-blue/normal/{{allPokemons[randomNumber].name}}.png">
 </div>
 <div class="d-flex flex-column align-items-center w-100 justify-content-center align-items-center my-5">
-  <button class="btn btn-dark" (click)="getAnotherRandomPokemon()">Get Another One!</button>
+  <button style="background-color:crimson; outline: none; border:none;"class="btn btn-dark" (click)="getAnotherRandomPokemon()">Get Another One!</button>
 </div>
