add a details page for single pokemons
add a new pokemon model to be the blueprint for all fetched data

add new random functionality

add new random styling

--- a/src/app/pages/input/input.component.html
+++ b/src/app/pages/input/input.component.html
@@ -1,4 +1,4 @@
-<div class="container align-middle w-75 my-4">
+<div style="width: 92%;" class="container align-middle my-4">
   <input
   type="text"
   class="form-control"
