--- a/src/app/pages/pokemon/pokemon.component.html
+++ b/src/app/pages/pokemon/pokemon.component.html
@@ -1,8 +1,20 @@
-<div *ngIf="pickedPokemon" style="text-align:center">
-  <h1>
-  Welcome from {{ pickedPokemon }}!
-  </h1>
-  <img width="300" alt="Pokemon sprite" src="https://img.pokemondb.net/sprites/red-blue/normal/{{pickedPokemon}}.png">
+<div class="col">
+  <div *ngIf="pickedPokemon">
+    <div class="container my-2 d-flex justify-content-start w-lg-50">
+      <h1>Nr<span style="color:crimson">.</span> {{pokemonInfos.id}} || {{ pickedPokemon }}</h1>
+    </div>
+    <div class="container d-flex my-5 justify-content-center">
+      <img alt="Pokemon sprite" src="https://img.pokemondb.net/sprites/red-blue/normal/{{pickedPokemon}}.png">
+    </div>
+  </div>
+  <div class="container my-2 w-lg-50">
+      <app-details [pokemonData]="pokemonInfos" [pokemonStats]="pokemonStats" [pokemonTypes]="pokemonTypes">
+      </app-details>
+  </div>
 </div>
+
+
 <!--<input type="text" class="pokemonName" #pokemonName>
 <button (click)="getAPokemon(pokemonName.value)">getPokemon</button>-->
+
+
