--- a/src/app/pages/pokemonList/pokemonList.component.html
+++ b/src/app/pages/pokemonList/pokemonList.component.html
@@ -1,4 +1,4 @@
-<div class="container container-fluid align-middle w-100">
+<div class="container align-middle w-100">
   <app-input (searchTextChange)="setSearchText($event)"></app-input>
   <div class="d-inline-flex flex-wrap flex-grow-1 justify-content-center w-100">
   <div *ngFor="let pokemon of pokemonArray">
