--- a/src/app/pages/random/random.component.css
+++ b/src/app/pages/random/random.component.css
@@ -1,3 +1,12 @@
 img{
   width: 10rem;
 }
+
+button:hover{
+  opacity: 0.8;
+}
+
+button:active{
+  padding:3px 4px 3px 6px;
+  font-size: 0.9rem;
+}
