--- a/src/app/pages/random/random.component.html
+++ b/src/app/pages/random/random.component.html
@@ -1,17 +1,20 @@
-<div class="container col my-2" *ngIf="allPokemons !==undefined">
+<div class="container col my-2" *ngIf="allPokemons[randomNumber]?.name !=null">
   <h1 style="text-align:center">
     Congrats!!
   </h1>
   <div class="row order-1">
     <div class="container d-flex justify-content-center">
-      <img alt="Pokemon sprite" src="https://img.pokemondb.net/sprites/red-blue/normal/{{allPokemons[randomNumber]?.name}}.png">
+      <img alt="Pokemon sprite" src="https://img.pokemondb.net/sprites/red-blue/normal/{{allPokemons[randomNumber].name}}.png">
     </div>
     <h1 style="text-align:center">
-      You just got {{allPokemons[randomNumber]?.name}}!
+      You just got {{allPokemons[randomNumber].name}}!
       </h1>
   </div>
   <div class="row order-0">
     <app-randomDetails [level]="randomLvl" [shiny]="randomShiny" [beauty]="randomBeautyLvl" [power]="randomPowerLvl" ></app-randomDetails>
   </div>
 </div>
-
+<div class="container col my-2 align-content-center">
+  <div class="d-flex justify-content-center my-4" *ngIf="allPokemons[randomNumber]?.name == null"><h1>Time to fetch your first Pokemon!</h1></div>
+  <div class="container d-flex justify-content-center"><button style="background-color:crimson; border:none" class="btn btn-dark w-lg-25" (click)="getRandomPokemon()">Get New Random!</button></div>
+</div>
