add a pulledPokemon component
add a localStorage

--- a/src/app/pages/navbar/navbar.component.html
+++ b/src/app/pages/navbar/navbar.component.html
@@ -17,6 +17,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="random">Random!</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="owned">Pulled</a>
+        </li>
       </ul>
     </div>
   </div>
