--- a/src/app/pages/pokemonList/pokemonList.component.html
+++ b/src/app/pages/pokemonList/pokemonList.component.html
@@ -1,4 +1,4 @@
-<div class="container w-75">
+<div class="container w-auto">
   <app-input (searchTextChange)="setSearchText($event)"></app-input>
   <div class="d-flex flex-wrap flex-grow-0 justify-content-center">
   <div *ngFor="let pokemon of pokemonArray">
@@ -13,3 +13,5 @@
     </div>
   </div>
 </div>
+
+
