--- a/src/app/pages/randomDetails/randomDetails.component.html
+++ b/src/app/pages/randomDetails/randomDetails.component.html
@@ -13,12 +13,12 @@
     </div>
     <div class="card my-2">
       <div class="card-body">
-        Power: <span [style]="{'color':compareTextValue(power,'Weak','Medium','Strong','Godlike!!')}" id="powerStyle">{{power}}</span>
+        Power: <span [style]="{'color':compareTextValue(power,'*','**','***','****')}" id="powerStyle">{{power}}</span>
       </div>
     </div>
     <div class="card my-2">
       <div class="card-body">
-        Beauty: <span [style]="{'color':compareTextValue(beauty,'Ugly','Okayish','Beautiful','Breathtaking!!')}" id="beautyStyle">{{beauty}}</span>
+        Beauty: <span [style]="{'color':compareTextValue(beauty,'*','**','***','****')}" id="beautyStyle">{{beauty}}</span>
       </div>
     </div>
 </div>
