--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5 align-items-center w-100">
-  <div class="row align-items-center w-100">
-      <div class="col text-center text-md-center">
-          <h1>Welcome to PokeDex</h1>
+  <div class="row align-items-center">
+      <div class="col text-center align-content-center">
+          <h1>Welcome to RetroDex</h1>
           <p class="lead">Check em' all!</p>
           <p>This is a little <span style="color:crimson">Angular</span> application to test stuff.</p>
       </div>
