--- a/src/app/pages/navbar/navbar.component.html
+++ b/src/app/pages/navbar/navbar.component.html
@@ -26,6 +26,9 @@
             </span>
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="guestbook">Guestbook</a>
+        </li>
       </ul>
     </div>
   </div>
